--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>图片压缩工具</title>
+    <meta name="description" content="一个帮助你压缩图片的工具，支持 PNG、JPG 格式，可自定义压缩比例，实时预览压缩效果，免费在线使用。">
+    <meta name="keywords" content="图片,图片压缩,图片压缩工具,压缩工具,在线图片压缩,PNG压缩,JPG压缩,图片优化,图片处理"/>
+    <title>图片压缩工具 - 一个帮助你压缩图片的工具</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -11,7 +13,7 @@
     <div class="container">
         <!-- 头部标题 -->
         <header>
-            <h1>图片压缩工具</h1>
+            <h1 title="一个帮助你压缩图片的工具，支持 PNG、JPG 格式，可自定义压缩比例，实时预览压缩效果，免费在线使用。">图片压缩工具</h1>
             <p>简单、高效的图片压缩服务</p>
         </header>
 
@@ -70,6 +72,12 @@
             </div>
         </div>
     </div>
+
+    <!-- 版权声明 -->
+    <footer class="copyright">
+        <p>本站非盈利性质，内容来源于互联网，如有冒犯请联系我们立删邮箱：961674004#qq.com，#换成@就是邮箱。</a></p>
+        <p><a href="https://beian.miit.gov.cn" rel=nofollow>渝ICP备2025054030号-11</a></p>
+    </footer>
 
     <script src="js/main.js"></script>
 </body>
